# CFGBuilder

./: .gitignore  README.md  data_preprocess.sh  fix_err.sh  vulnerability_detection_path.drawio
contracts/json/: 0a02a22a49970b263e837e7ce6115f6b035fb9e6_lockEtherPay.sol.json  0a1aa8fde57c0680efc7d2491cfb77ec53d8a192_MyToken.sol.json  fe6e165757786bf49d121989f2fb6f3fa325bcef_VictoryGlobalCoin.sol.json  fe7f8a61d8b89f74c95ecb653c63fa245b08fc17_BancorKiller.sol.json  fe8b197c7da79a5a1ba07b7c45475f1820633927_lockEtherPay.sol.json  fe8b40a35ff222c8475385f74e77d33954531b41_XToken.sol.json  fe8c1c3e41960517b8c9fa83d9cf867b6275717f_IRECToken.sol.json  fe8eb5c34726bce6ef3fab63369f0772444a9a99_RNTDTokenCoin.sol.json
contracts/json/fixed/: 0aa91eb8d92a84cc9c8902f63a185d6ae5e87cff_HappyToken.sol.json
outputs/json/: MyToken.json  lockEtherPay.json
src/: CMakeLists.txt  main.cpp
